[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Assets/Fonts/hf-free-complete/matchup-pro-v1.1/MatchupPro.otf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://UI/Assets/Fonts/EndScreenTitle.tres" type="DynamicFont" id=3]
[ext_resource path="res://Items/Potions/Assets/space_potion.png" type="Texture" id=4]
[ext_resource path="res://UI/Assets/components/Buttons/buttonpress.png" type="Texture" id=5]
[ext_resource path="res://UI/Assets/components/Buttons/button.png" type="Texture" id=6]
[ext_resource path="res://UI/Assets/menu background/wallpaperflare.com_wallpaper.jpg" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 1.33484
margin_right = 3.0
margin_bottom = 1.33484
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = -388.893
margin_top = -244.116
margin_right = 1531.11
margin_bottom = 835.884
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Background"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 206.072
margin_top = 92.4193
margin_right = 806.072
margin_bottom = 194.419
custom_fonts/font = ExtResource( 3 )
text = "POTI  NFIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -302.0
margin_top = -36.0569
margin_right = 10.0
margin_bottom = -0.0568695
custom_fonts/font = SubResource( 1 )
text = "Don't bring a knife into a"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Title"]
margin_left = 182.48
margin_top = -16.5198
margin_right = 302.48
margin_bottom = 97.4802
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Control" parent="."]
anchor_left = 0.004
anchor_top = 0.623
anchor_right = 0.009
anchor_bottom = 0.623
margin_left = 441.904
margin_top = -111.8
margin_right = 536.784
margin_bottom = -11.8
rect_min_size = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="Button3"]
anchor_left = 0.5
anchor_top = -2.505
anchor_right = 0.5
anchor_bottom = -2.505
margin_left = -137.0
margin_top = 190.0
margin_right = 63.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button3"]
anchor_left = 0.56
anchor_top = 0.39
anchor_right = 0.56
anchor_bottom = 0.39
margin_left = -123.0
margin_top = -46.4455
margin_right = 37.0
margin_bottom = -10.4455
custom_fonts/font = SubResource( 2 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -215.0
margin_right = 33.0
margin_bottom = -115.0
rect_min_size = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControllerButton" type="TextureButton" parent="Button2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -134.47
margin_top = -63.5
margin_right = 65.5297
margin_bottom = 86.5
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.719
margin_top = -7.75507
margin_right = 48.2806
margin_bottom = 28.2449
custom_fonts/font = SubResource( 1 )
text = "CONTROLS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -54.0
margin_top = -103.0
margin_right = 46.0
margin_bottom = -3.0
rect_min_size = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditButton" type="TextureButton" parent="Button"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -149.0
margin_top = -57.5
margin_right = 51.0
margin_bottom = 92.5
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -130.26
margin_top = -3.37
margin_right = 29.7401
margin_bottom = 32.63
custom_fonts/font = SubResource( 1 )
text = "CREDITS"
align = 1
valign = 1
